--- a/css/km-to-miles.css
+++ b/css/km-to-miles.css
@@ -1,26 +1,89 @@
 @import url('/css/styles.css');
 
-* {
+/* * {
   outline: solid 1px red;
+} */
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 600px;
+  margin: 0 auto;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: rgb(20 51 92);
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  width: 80%;
 
-  /* align-items: center; */
-  justify-content: center;
+  /* max-width: 600px; */
+  padding: 2rem;
+  font-size: larger;
+  background: #2566bb;
+  background: linear-gradient(
+    180deg,
+    rgb(37 102 187 / 80%) 0%,
+    rgb(28 120 201) 75%
+  );
+  border: solid 5px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgb(17 33 124 / 50%);
+}
+
+.header__h1 {
+  display: block;
+  text-align: center;
 }
 
 .form {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  align-items: center;
   justify-content: center;
-  background-color: darkcyan;
 }
 
-.form .form__button {
-  align-self: center;
-  width: 150px;
+.form__label {
+  margin-right: 7px;
+}
+
+.form__input,
+.form__button {
+  padding: 6px;
+  border: solid 3px rgb(0 42 156);
+  border-radius: 5px;
+}
+
+.form__arrow {
+  font-size: 2rem;
+}
+
+.main__conv-rate {
+  display: block;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.main__result {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+@media screen and (width <= 525px) {
+  .header__h1 {
+    font-size: 1.5rem;
+  }
+
+  .form__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .form__label {
+    margin-bottom: 6px;
+  }
 }
